# agent-marketplace

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CNAME  CONTRIBUTING.md  README.md  bootstrap.sh  manifest
.beads/: config.yaml  issues.jsonl  metadata.json
.claude-plugin/: marketplace.json
.claude/commands/: adopt.md  promote.md
.codex-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-pages.yml  lint.yml  validate.yml
.playwright-mcp/: page-2026-04-21T05-56-41-550Z.yml
.serena/: project.yml
design/personal-site/: CONTENT.md  DESIGN.md  PROMPT.md
docs/: article-mining.md  idea-article_extractor.md  index.md
docs/superpowers/plans/: 2026-04-20-plugin-marketplace.md
installer/: install.js  package-lock.json  package.json
nursery/brightness-knob/: README.md
nursery/claude-switcher/: README.md
nursery/obsidian-user-base/: CLAUDE.md  justfile  pyproject.toml
nursery/obsidian-user-base/launchd/: com.joeblack.wiki-watcher.plist
nursery/obsidian-user-base/scripts/: phase4_wikilinks.py  phase5_restructure.py
nursery/obsidian-user-base/src/: ingest.py  watcher.py
nursery/openclaw-setup/: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md
nursery/orb-autostop/: README.md
projects/obsidian-user-base/: README.md
projects/openclaw-setup/: .gitignore  install.sh
schemas/: codex-marketplace.schema.json  marketplace.schema.json
site/: catalog.js  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
site/tests/: catalog.test.js
(+28 files in other folders)
