[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-user-base"
version = "0.1.0"
description = "Karpathy-style LLM-maintained wiki ingest engine for Obsidian vault"
requires-python = ">=3.12"
dependencies = [
    "watchdog>=6.0",
    "typer>=0.15",
    "rich>=14.0",
    "structlog>=25.0",
]

[project.scripts]
wiki-ingest  = "ingest:app"
wiki-watcher = "watcher:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
